--- a/lab 5/css/home.css
+++ b/lab 5/css/home.css
@@ -8,7 +8,7 @@ html {
 
 .hero {
    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-      url('/images/home.jpg');
+      url('/lab\ 5/images/home.jpg');
    background-size: cover;
    background-position: center;
    height: 100vh;
