--- a/lab 6/css/main.css
+++ b/lab 6/css/main.css
@@ -12,6 +12,10 @@ body {
    padding-top: 100px;
 }
 
+header {
+   border-radius: 500px;
+}
+
 .main-nav a {
    text-decoration: none;
    color: var(--text-dark) !important;
@@ -64,8 +68,25 @@ body {
    transition: 0.3s;
 }
 
+.sub-nav button {
+   background-color: #023020;
+   color: white;
+   border: 2px solid transparent;
+   padding: 10px 25px;
+   border-radius: 500px;
+   font-family: 'Segoe UI', sans-serif;
+   font-size: 15px;
+   font-weight: 600;
+   cursor: pointer;
+   position: relative;
+   transition: all 0.3s ease;
+   outline: 2px solid transparent;
+   outline-offset: 4px;
+}
+
 .sub-nav button:hover {
    background: #034d34;
+   outline: 2px solid var(--yellow);
 }
 
 
@@ -151,6 +172,8 @@ header {
    break-inside: avoid;
    display: flex;
    flex-direction: column;
+   cursor: pointer;
+
 }
 
 .container>.pin-item:first-child {
