--- a/lab 6/css/main.css
+++ b/lab 6/css/main.css
@@ -47,7 +47,10 @@ header {
 .sub-nav {
    background: #f5f5f5;
    padding: 20px 0 20px 0;
-   text-align: center;
+   display: flex;
+   justify-content: right;
+   align-items: center;
+   gap: 15px;
    border-bottom: 5px solid #ddd;
    position: sticky;
    top: 70px;
@@ -63,6 +66,7 @@ header {
    font-size: small;
    padding: 8px 20px;
    border-radius: 500px;
+   margin: 5px 10px;
    font-weight: bold;
    cursor: pointer;
    transition: 0.3s;
