--- a/lab 6/css/main.css
+++ b/lab 6/css/main.css
@@ -13,7 +13,20 @@ body {
 }
 
 header {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   gap: 15px;
+   width: 100%;
+   padding: 10px 20px;
+   background-color: rgba(32, 21, 21, 0.7);
    border-radius: 500px;
+}
+
+.center-block {
+   display: flex;
+   align-items: center;
+   gap: 25px;
 }
 
 .main-nav a {
@@ -44,42 +57,14 @@ header {
    float: right;
 }
 
-.sub-nav {
-   background: #f5f5f5;
-   padding: 20px 0 20px 0;
-   display: flex;
-   justify-content: right;
-   align-items: center;
-   gap: 15px;
-   border-bottom: 5px solid #ddd;
-   position: sticky;
-   top: 70px;
-   z-index: 999;
-   border-radius: 500px;
-   box-shadow: 0 1px 12px rgba(0, 0, 0, 0.1);
-}
-
-.sub-nav button {
+header button {
    background: #023020;
    color: white;
-   border: none;
-   font-size: small;
-   padding: 8px 20px;
-   border-radius: 500px;
-   margin: 5px 10px;
-   font-weight: bold;
-   cursor: pointer;
-   transition: 0.3s;
-}
-
-.sub-nav button {
-   background-color: #023020;
-   color: white;
    border: 2px solid transparent;
-   padding: 10px 25px;
-   border-radius: 500px;
-   font-family: 'Segoe UI', sans-serif;
    font-size: 15px;
+   padding: 10px 25px;
+   font-family: 'Segoe UI', sans-serif;
+   border-radius: 500px;
    font-weight: 600;
    cursor: pointer;
    position: relative;
@@ -88,7 +73,7 @@ header {
    outline-offset: 4px;
 }
 
-.sub-nav button:hover {
+header button:hover {
    background: #034d34;
    outline: 2px solid var(--yellow);
 }
