--- a/lab 6/css/home.css
+++ b/lab 6/css/home.css
@@ -8,49 +8,39 @@ html {
 
 .hero {
    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-      url('/lab 5/images/home.jpg');
+      url('/lab\ 5/images/home.jpg');
    background-size: cover;
    background-position: center;
    height: 100vh;
-
    display: flex;
    flex-direction: column;
-   justify-content: flex-start;
-   padding-top: 150px;
-
-
    align-items: center;
-
    color: white;
    text-align: center;
 }
 
-
 h1 {
    font-size: 4rem;
    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-   margin-top: 40px;
+   margin-top: 150px;
    margin-bottom: 0;
 }
 
 .get-started {
-   padding: 18px 60px;
+   margin-top: 330px;
+   padding: 18px 50px;
+   background-color: #4a3aff;
    color: white;
    text-decoration: none;
-   border-radius: 60px;
+   border-radius: 50px;
    font-size: 1.2rem;
-   margin-top: 500px;
-
-   background: rgba(255, 255, 255, 0.15);
-   backdrop-filter: blur(10px);
-   -webkit-backdrop-filter: blur(10px);
-
-   border: 1px solid rgba(255, 255, 255, 0.3);
-
    transition: 0.3s;
+   opacity: 0.7;
+   border: none;
+   outline: none;
 }
 
 .get-started:hover {
-   background: rgba(255, 255, 255, 0.25);
-   transform: translateY(-3px);
+   background-color: #3527cc;
+   transform: scale(1.05);
 }
