--- a/css/home.css
+++ b/css/home.css
@@ -8,7 +8,7 @@ html {
 
 .hero {
    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-      url('/lab\ 3/images/home.jpg');
+      url('/images/home.jpg');
    background-size: cover;
    background-position: center;
    height: 100vh;
