--- a/css/schedule.css
+++ b/css/schedule.css
@@ -35,12 +35,12 @@ header {
    text-decoration: none;
 }
 
-.main-nav {
+nav.main-nav {
    display: flex;
    gap: 25px;
 }
 
-.main-nav a {
+nav.main-nav a {
    text-decoration: none;
    color: #111;
    font-weight: 600;
@@ -50,7 +50,7 @@ header {
    transition: 0.3s;
 }
 
-.main-nav a:hover {
+nav.main-nav a:hover {
    background-color: #efefef;
 }
 
@@ -92,6 +92,18 @@ body {
    flex-direction: column;
    align-items: center;
 
+}
+
+.back-btn {
+   position: absolute;
+   left: 30px;
+   top: 25px;
+   text-decoration: none;
+   color: #111;
+   font-weight: bold;
+   display: flex;
+   align-items: center;
+   gap: 5px;
 }
 
 .content-card {
