lab 5 has finished

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
    --text-dark: #1a1a1a;
 }
 
+
 body {
    background-color: var(--bg-color);
    font-family: 'Segoe UI', Roboto, sans-serif;
@@ -29,12 +30,25 @@ body {
 
 .header-gallery>h1 {
    font-family: 'Georgia', serif;
-   font-size: 4rem;
+   font-size: clamp(2rem, 5vw, 4rem);
    color: var(--accent);
    text-align: center;
    margin-left: 0;
    margin-bottom: 30px;
    padding: 0 20px;
+}
+
+.header-gallery h1::before {
+   content: "( ";
+}
+
+.header-gallery h1::after {
+   content: " )";
+}
+
+
+.float-box p::after {
+   content: "! ";
 }
 
 .pin-content b+p {
@@ -43,9 +57,9 @@ body {
    font-style: italic;
 }
 
-.pin-item~.pin-item {
+/* .pin-item~.pin-item {
    opacity: 0.6;
-}
+} */
 
 header {
    position: fixed;
@@ -109,6 +123,10 @@ header {
    display: block;
 }
 
+.pin-item:first-child {
+   border: 3px solid var(--accent);
+}
+
 .pin-content {
    padding: 15px;
 }
@@ -125,6 +143,11 @@ header {
    font-size: 14px;
 }
 
+.avatar {
+   float: right;
+}
+
+
 .profile-link {
    display: flex;
    align-items: center;
@@ -132,6 +155,52 @@ header {
    text-decoration: none;
    color: var(--text-dark);
 }
+
+a:link {
+   color: var(--accent);
+}
+
+a:visited {
+   color: #6b6b6b;
+}
+
+a:hover {
+   color: white;
+   background-color: var(--accent);
+}
+
+a:active {
+   color: red;
+}
+
+.highlight-text {
+   color: aqua;
+   font-style: italic;
+}
+
+.float-demo {
+   margin: 30px auto;
+   width: 80%;
+   background: #ffffff;
+   padding: 20px;
+   border-radius: 12px;
+   overflow: hidden;
+}
+
+.float-box {
+   float: right;
+   width: 120px;
+   height: 120px;
+   background: #023020;
+   color: white;
+   font-weight: bold;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   margin-left: 15px;
+   border-radius: 12px;
+}
+
 
 footer {
    text-align: center;
